objects/test_quip__c.object
<CustomObject>
    <fields>
        <fullName>num1__c</fullName>
        <label>num1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num2__c</fullName>
        <label>num2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quip_document_url__c</fullName>
        <label>quip document url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>text1__c</fullName>
        <label>text1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text2__c</fullName>
        <label>text2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>test quip</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>document name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>test quip</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>